--- a/style.css
+++ b/style.css
@@ -19,6 +19,10 @@ body{
     transition: 0.3s;
 }
 
+#signUpModal{
+    transition: 0.3s;
+}
+
 #search-bar{
     border-radius: 30px;
     border: 1px solid black;
